<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="50dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_personal_information"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26dp"
        android:textColor="@color/primary"
        android:text="@string/register"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:paddingLeft="10dp"
        android:ems="10"
        android:maxLength="50"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/border_redondo"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:hint="@string/user"
        android:maxLength="50"
        android:paddingLeft="10dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:inputType="text"
        android:background="@drawable/border_redondo"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/txtDNI"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:maxLength="8"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:hint="@string/dni"
        android:paddingLeft="10dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_dni"
        android:drawablePadding="10dp"
        android:inputType="number"
        android:background="@drawable/border_redondo"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:hint="@string/firstName"
        android:paddingLeft="10dp"
        android:maxLength="50"
        android:drawableLeft="@drawable/ic_letter"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/border_redondo"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:hint="@string/lastName"
        android:paddingLeft="10dp"
        android:maxLength="50"
        android:ems="10"
        android:drawableLeft="@drawable/ic_letter"
        android:drawablePadding="10dp"
        android:inputType="text"
        android:background="@drawable/border_redondo"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:textSize="14dp"
        android:maxLength="50"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/border_redondo"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:backgroundTint="@color/primary"
        android:text="@string/register"
        android:textColor="@color/white"/>
</LinearLayout>