<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".auth.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|right"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_login_1" />

        <!--        <Button-->
        <!--            android:id="@+id/btnFaceook"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:background="@drawable/border_redondo"-->
        <!--            android:backgroundTint="@color/facebook"-->
        <!--            android:drawableStart="@drawable/logo_facebook"-->
        <!--            android:paddingLeft="20dp"-->
        <!--            android:text="@string/facebook"-->
        <!--            android:textAllCaps="false"-->
        <!--            android:textColor="@color/white" />-->

        <com.facebook.login.widget.LoginButton
            android:id="@+id/buttonFacebookLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_redondo"
            android:backgroundTint="@color/google"
            android:drawableLeft="@drawable/logo_google"
            android:paddingLeft="20dp"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/usua"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_redondo"
            android:gravity="center_vertical"
            android:hint="@string/login_user"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingLeft="10dp"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/passw"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_redondo"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:paddingLeft="10dp"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_redondo"
            android:backgroundTint="@color/primary"
            android:text="@string/btnSignIn"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_redondo"
            android:backgroundTint="@color/fifth"
            android:text="@string/btnSignUp"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/forgot_password" />


    </LinearLayout>
    </ScrollView>
</FrameLayout>