<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.ConfirmDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26dp"
            android:textColor="@color/primary"
            android:text="Confirmar pago" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:textColor="@color/primary"
            android:background="@drawable/message_notification"
            android:text="Complete los datos para continuar" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:paddingLeft="10dp"
            android:ems="10"
            android:maxLength="50"
            android:inputType="text"
            android:background="@drawable/border_redondo"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:ems="10"
            android:maxLength="50"
            android:inputType="textEmailAddress"
            android:background="@drawable/border_redondo"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/txtDNI"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxLength="8"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:hint="@string/dni"
            android:paddingLeft="10dp"
            android:ems="10"
            android:inputType="number"
            android:background="@drawable/border_redondo"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxLength="8"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:hint="@string/address"
            android:paddingLeft="10dp"
            android:ems="10"
            android:inputType="number"
            android:background="@drawable/border_redondo"
            android:textSize="14dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_address" />

        <Button
            android:id="@+id/btnSave"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            android:text="@string/save_and_continue" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:progress="1"/>

    </LinearLayout>

</FrameLayout>