<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="55dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:textColor="@color/primary"
        android:textSize="26dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_mail" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/txtForgotPassword"
        android:textColor="@color/primary" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/txtOne"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/border_redondo"
            android:inputType="text"
            android:maxLength="1"
            android:gravity="center"
            android:hint="0"
            android:layout_marginRight="5dp"
            android:textSize="18dp" />
        <EditText
            android:id="@+id/txtTwo"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/border_redondo"
            android:inputType="text"
            android:maxLength="1"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:hint="0"
            android:textSize="18dp" />
        <EditText
            android:id="@+id/txtThree"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/border_redondo"
            android:inputType="text"
            android:maxLength="1"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:hint="0"
            android:textSize="18dp" />
        <EditText
            android:id="@+id/txtFour"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/border_redondo"
            android:inputType="text"
            android:maxLength="1"
            android:gravity="center"
            android:hint="0"
            android:textSize="18dp" />
        <EditText
            android:id="@+id/txtFive"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/border_redondo"
            android:inputType="text"
            android:maxLength="1"
            android:gravity="center"
            android:hint="0"
            android:textSize="18dp" />
    </LinearLayout>



    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/enter"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:text="@string/resend"
        android:textAllCaps="false" />




</LinearLayout>